Bug 389851. Accessible value not working with ARIA progressbars and sliders. r=scott@bashautomation.com, a=dsicore